--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "release-auti3",
+  "name": "release-auti2",
   "version": "1.0.0",
   "description": "release auti2",
   "keywords": [
@@ -25,8 +25,8 @@
     "test": "echo 'No Tests'",
     "posttest": "npm run lint",
     "test:dev": "lb-mocha --allow-console-logs dist/__tests__/**/*.js && npm run posttest",
-    "docker:build": "docker build -t release-auti3 .",
-    "docker:run": "docker run -p 3000:3000 -d release-auti3",
+    "docker:build": "docker build -t release-auti2 .",
+    "docker:run": "docker run -p 3000:3000 -d release-auti2",
     "premigrate": "npm run build",
     "migrate": "node ./dist/migrate",
     "preopenapi-spec": "npm run build",
@@ -66,7 +66,10 @@
     "@loopback/eslint-config": "^11.0.2",
     "@loopback/testlab": "^3.4.4",
     "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^8.0.3",
+    "@semantic-release/release-notes-generator": "^10.0.3",
     "@types/node": "^10.17.60",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
@@ -87,16 +90,17 @@
     }
   },
   "release": {
-    "branches": [
-      "master"
-    ],
+    "branches": ["master"],
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
-      "@semantic-release/npm",
-      "@semantic-release/github",
       "@semantic-release/changelog",
-      "@semantic-release/git"
+      "@semantic-release/npm",
+      ["@semantic-release/git", {
+        "assets": ["dist/", "package.json","CHANGELOG.md"],
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+      }],
+      "@semantic-release/github"
     ],
     "repositoryUrl": "git@github.com:yeshamavani/release-auti2.git"
   }
