--- a/package.json
+++ b/package.json
@@ -51,35 +51,35 @@
     "!*/__tests__"
   ],
   "dependencies": {
-    "@loopback/boot": "^3.4.4",
-    "@loopback/core": "^2.18.0",
-    "@loopback/repository": "^3.7.3",
-    "@loopback/rest": "^10.1.0",
-    "@loopback/rest-explorer": "^3.3.4",
-    "@loopback/service-proxy": "^3.2.4",
+    "@loopback/boot": "^5.0.3",
+    "@loopback/core": "^4.0.3",
+    "@loopback/repository": "^5.0.3",
+    "@loopback/rest": "^12.0.3",
+    "@loopback/rest-explorer": "^5.0.3",
+    "@loopback/service-proxy": "^5.0.3",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
-    "@loopback/build": "^7.0.2",
-    "@loopback/eslint-config": "^11.0.2",
-    "@loopback/testlab": "^3.4.4",
+    "@loopback/build": "^9.0.3",
+    "@loopback/eslint-config": "^13.0.3",
+    "@loopback/testlab": "^5.0.3",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/npm": "^8.0.3",
     "@semantic-release/release-notes-generator": "^10.0.3",
-    "@types/node": "^10.17.60",
+    "@types/node": "^14.18.26",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^6.3.0",
     "cz-customizable-ghooks": "^2.0.0",
-    "eslint": "^7.32.0",
+    "eslint": "^8.22.0",
     "husky": "^7.0.4",
     "semantic-release": "^18.0.1",
-    "source-map-support": "^0.5.20",
-    "typescript": "~4.4.4"
+    "source-map-support": "^0.5.21",
+    "typescript": "~4.7.4"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
@@ -94,7 +94,19 @@
       "master"
     ],
     "plugins": [
-      "@semantic-release/commit-analyzer",
+      [
+        "@semantic-release/commit-analyzer",
+        {
+          "preset": "angular",
+          "releaseRules": [
+            {
+              "type": "chore",
+              "scope": "deps",
+              "release": "patch"
+            }
+          ]
+        }
+      ],
       "@semantic-release/release-notes-generator",
       "@semantic-release/changelog",
       "@semantic-release/npm",
@@ -102,7 +114,6 @@
         "@semantic-release/git",
         {
           "assets": [
-            "dist/",
             "package.json",
             "CHANGELOG.md"
           ],
