--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@loopback/rest": "^12.0.3",
     "@loopback/rest-explorer": "^5.0.3",
     "@loopback/service-proxy": "^5.0.3",
+    "jsdom": "^20.0.1",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
