--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,5 @@
     "outDir": "dist",
     "rootDir": "src"
   },
-  "include": ["src","./release-notes.js"]
+  "include": ["src","./release-notes.js", "./post-processing.js","./post-script.js"]
 }
