--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "release-auti2",
-  "version": "5.4.0",
+  "version": "5.4.1",
   "description": "release auti2",
   "keywords": [
     "loopback-application",
@@ -45,7 +45,7 @@
   "author": " <yesha.mavani@sourcefuse.com>",
   "license": "",
   "files": [
-    "README.md",
+    "docs/README.md",
     "dist",
     "src",
     "!*/__tests__"
