--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -52,5 +52,6 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
+            HUSKY=0
             const script = require('./src/release_notes/release-notes.js')
             await script()
