--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -50,8 +50,8 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: ChangeLog script
         uses: actions/github-script@v7
+        run: HUSKY=0
         with:
           script: |
-            HUSKY=0
             const script = require('./src/release_notes/release-notes.js')
             await script()
