--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -48,13 +48,5 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.RELEASE_COMMIT_GH_PAT }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      # - name: ChangeLog script
-      #   uses: actions/github-script@v7
-      #   with:
-      #     script: |
-      #       const script = require('./src/release_notes/release-notes.js')
-      #       await script()
-        -name: Changelog script
-         run: |
-          cd src/release_notes
-          HUSKY=0 node release-notes.js
+      -name: Changelog script
+        run: cd src/release_notes && HUSKY=0 node release-notes.js
