feat(chore): dsv
tt

GH-00

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Install 📌
         run: |
-          npm ci --only=production --ignore-scripts
+          npm install
       - name: Test 🔧
         run: npm run test
       - name: Semantic Publish to NPM 🚀
